@@ -1,3 +1,7 @@
+2011-03-31  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/defaulted24.C: New.
+
 2011-03-31  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	PR target/16292
