@@ -1,3 +1,8 @@
+2011-03-31  Jason Merrill  <jason@redhat.com>
+
+	PR c++/48280
+	* method.c (defaultable_fn_check): Templates are not defaultable.
+
 2011-03-30  Jason Merrill  <jason@redhat.com>
 
 	PR c++/48212
